# finance-examples

./: .gitignore  Arrays.ipynb  Import Part 1.ipynb  Random.ipynb  pyproject.toml
