[tool.poetry]
name = "learn-finance-with-python"
version = "0.1.0"
description = ""
authors = ["Ignacio De La Madrid <ignacio.delamadrid@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
jupyter = "^1.0"
pandas = "^0.23.4"
matplotlib = "^3.0"
statsmodels = "^0.9.0"
pandas-datareader = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
